--- a/package.json
+++ b/package.json
@@ -16,7 +16,15 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
+    "@mdx-js/react": "^2.2.1",
+    "dotenv": "^16.0.3",
     "gatsby": "^5.3.3",
+    "gatsby-plugin-image": "^3.3.2",
+    "gatsby-plugin-mdx": "^5.3.1",
+    "gatsby-plugin-sharp": "^5.3.2",
+    "gatsby-source-contentful": "^8.3.1",
+    "gatsby-source-filesystem": "^5.3.1",
+    "gatsby-transformer-sharp": "^5.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
